[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/state_machine/inspector/operator_button.gd" type="Script" id=1]
[ext_resource path="res://addons/state_machine/inspector/condition_usage_graph_node.gd" type="Script" id=2]

[node name="ConditionUsageGraphNode" type="GraphNode"]
margin_right = 124.0
margin_bottom = 116.0
show_close = true
slot/0/left_enabled = true
slot/0/left_type = 1
slot/0/left_color = Color( 0.392157, 0.584314, 0.929412, 1 )
slot/0/right_enabled = true
slot/0/right_type = 0
slot/0/right_color = Color( 1, 0.498039, 0.313726, 1 )
slot/1/left_enabled = false
slot/1/left_type = 0
slot/1/left_color = Color( 1, 1, 1, 1 )
slot/1/right_enabled = false
slot/1/right_type = 0
slot/1/right_color = Color( 1, 1, 1, 1 )
slot/2/left_enabled = false
slot/2/left_type = 0
slot/2/left_color = Color( 1, 1, 1, 1 )
slot/2/right_enabled = false
slot/2/right_type = 0
slot/2/right_color = Color( 1, 1, 1, 1 )
slot/3/left_enabled = false
slot/3/left_type = 0
slot/3/left_color = Color( 1, 1, 1, 1 )
slot/3/right_enabled = false
slot/3/right_type = 0
slot/3/right_color = Color( 1, 1, 1, 1 )
slot/4/left_enabled = false
slot/4/left_type = 0
slot/4/left_color = Color( 1, 1, 1, 1 )
slot/4/right_enabled = false
slot/4/right_type = 0
slot/4/right_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )

[node name="Subtitle" type="Label" parent="."]
margin_left = 16.0
margin_top = 24.0
margin_right = 108.0
margin_bottom = 38.0

[node name="HSeparator" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 39.0
margin_right = 108.0
margin_bottom = 43.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 16.0
margin_top = 44.0
margin_right = 108.0
margin_bottom = 84.0

[node name="Condition" type="Button" parent="HBoxContainer"]
modulate = Color( 1, 0.498039, 0.313726, 1 )
margin_right = 12.0
margin_bottom = 40.0
size_flags_horizontal = 3

[node name="ExpectedResult" type="CheckButton" parent="HBoxContainer"]
margin_left = 16.0
margin_right = 92.0
margin_bottom = 40.0

[node name="HSeparator2" type="HSeparator" parent="."]
margin_left = 16.0
margin_top = 85.0
margin_right = 108.0
margin_bottom = 89.0

[node name="Operator" type="Button" parent="."]
margin_left = 16.0
margin_top = 90.0
margin_right = 108.0
margin_bottom = 110.0
text = "Operator"
script = ExtResource( 1 )

[node name="Node" type="Node" parent="."]

[node name="ConditionFileDialog" type="FileDialog" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -196.5
margin_top = -158.5
margin_right = 196.5
margin_bottom = 158.5
size_flags_horizontal = 3
size_flags_vertical = 3
popup_exclusive = true
window_title = "Open a File"
resizable = true
dialog_hide_on_ok = true
dialog_autowrap = true
mode = 0
filters = PoolStringArray( "*.tres" )

[node name="AcceptDialog" type="AcceptDialog" parent="Node"]
margin_right = 83.0
margin_bottom = 58.0
window_title = "Wrong Resource Type Selected!"
dialog_text = "You need to select a StateConditionResource!"

[node name="DeleteConfirmationDialog" type="ConfirmationDialog" parent="Node"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -100.0
margin_top = -35.0
margin_right = 100.0
margin_bottom = 35.0
dialog_text = "Delete this ConditionUsage?"

[connection signal="close_request" from="." to="Node/DeleteConfirmationDialog" method="popup_centered"]
[connection signal="pressed" from="HBoxContainer/Condition" to="." method="_on_condition_button_pressed"]
[connection signal="toggled" from="HBoxContainer/ExpectedResult" to="." method="_on_expected_result_changed"]
[connection signal="pressed" from="Operator" to="Operator" method="_on_pressed"]
[connection signal="value_changed" from="Operator" to="." method="_on_operator_changed"]
[connection signal="file_selected" from="Node/ConditionFileDialog" to="." method="_on_condition_changed"]
[connection signal="confirmed" from="Node/AcceptDialog" to="Node/ConditionFileDialog" method="popup_centered"]
[connection signal="confirmed" from="Node/DeleteConfirmationDialog" to="." method="_on_deleted"]
